# csg

./: .gitignore  CMakeLists.txt  README.md
include/: bbox.h  camera.h  common.h  customgui.h  glmutil.h  mathutil.h  mc.h  mc_data.h  mesh.h  node.h  shader.h
shaders/: shader.frag  shader.vert
src/: common.cpp  customgui.cpp  main.cpp  mathutil.cpp  mc.cpp  mesh.cpp  node.cpp  shader.cpp
